Fixed contrast issues

--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@
     
 }
 
+.quote-footer {
+    color:white;
+}
+
 
 
 .flexbox2,
